forget getbyid function. use sql.errnorows update api. added ghost
